--- a/html/home.css
+++ b/html/home.css
@@ -92,7 +92,7 @@ border: 1px solid blue;
 }
 #reward{
     border: 1px solid blue;
-    height: 350px;
+    /* height: 350px; */
     margin-left: 40px;
     margin-right: 40px;
     display: flex;
@@ -103,7 +103,7 @@ border: 1px solid blue;
 }
 #reward>div:nth-child(1)>img{
     width: 100%;
-    height: 100%;
+    height: 60vh;
 }
 #reward>div:nth-child(2){
     width: 66%;
@@ -367,4 +367,38 @@ background-color: black;
 }
 #head>h4:hover{
    color: #aaaaaa;
+}
+
+#booking{
+display: grid;
+grid-template-columns: repeat(2,1fr);
+gap: 20px;
+padding: 30px;
+}
+#booking>div>img{
+    width: 100%;
+}
+#booking>div{
+    text-align: center;
+    padding: 10px;
+}
+@media screen and (min-width: 768px) and (max-width: 1024px){
+    #footer{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+   
+        flex-wrap: wrap;
+    }
+    
+}
+@media screen and (min-width: 320px) and (max-width: 767px){
+    #footer{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        margin-top: 40px;
+        flex-wrap: wrap;
+    }
+    
 }
